css/main.css
@import url("https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css");
* {
  -webkit-font-smoothing: antialiased;
  box-sizing: border-box;
}

html,
body {
  display: flex;
  width: 100vw;
  flex-direction: column;
  scroll-behavior: smooth;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0px;
}

a {
  text-decoration: none;
  color: inherit;
  cursor: default;
}

/* a blue color as a generic focus style */
@font-face {
  font-family: BG-Regular;
  src: url("../fonts/BrandonGrotesque_regular.otf") format("opentype");
  font-weight: 390;
}
@font-face {
  font-family: BG-Medium;
  src: url("../fonts/BrandonGrotesque_medium.otf") format("opentype");
  font-weight: 420;
}
@font-face {
  font-family: BG-Bold;
  src: url("../fonts/BrandonGrotesque_bold.otf") format("opentype");
  font-weight: 450;
}
@font-face {
  font-family: CG-Regular;
  src: url("../fonts/CormorantGaramond-Regular.ttf") format("truetype");
  font-weight: 400;
}
@font-face {
  font-family: CG-SemiBold;
  src: url("../fonts/CormorantGaramond-SemiBold.ttf") format("truetype");
  font-weight: 600;
}
@keyframes scroll {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-100%);
  } /* Adjust the number of images */
}
body {
  width: 100vw;
  line-height: normal;
  background-image: url(../img/bg_noise.png);
  background-color: #e7e6e0;
  background-repeat: repeat;
  overflow-x: hidden;
  position: relative;
}

.mb {
  display: none;
}

.wrapper {
  width: 83.3333333333vw;
  margin-inline: auto;
}

.main {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 8.3333333333vw;
}

.sectionSeparator {
  width: 100vw;
  height: 1px;
  background-color: #4c4a4d;
  margin-top: 8.5416666667vw;
  z-index: 1;
}

.sectionSeparator2 {
  width: 100vw;
  height: 1px;
  background-color: #4c4a4d;
  margin-top: 2.0833333333vw;
  z-index: 1;
}

.sectionSeparator3 {
  width: 100vw;
  margin-right: 10vw;
  height: 1px;
  background-color: #4c4a4d;
  margin-top: 5.4166666667vw;
  z-index: 1;
}

.navBar {
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  justify-content: center;
  width: 100%;
  height: 9.375vw;
  padding-top: 2.7083333333vw;
  background-image: linear-gradient(180deg, #e7e6e0 0%, rgba(231, 230, 224, 0) 100%);
  z-index: 10;
}
.navBar .navBar_list {
  display: flex;
  margin: 0;
  justify-content: space-around;
  align-items: stretch;
  gap: 3.125vw;
}
.navBar .list {
  padding-top: 0.625vw;
  width: auto;
}
.navBar .list a {
  text-decoration: none;
  font-size: 0.8333333333vw;
  font-family: BG-Medium, sans-serif;
  font-weight: 420;
  line-height: 1.4;
  color: #0e1822;
  margin: 0;
  padding-top: 0.625vw;
  transition: 0.3s;
}
.navBar .list a:hover {
  font-style: normal;
  font-weight: 450;
  text-decoration-line: line-through;
  text-transform: uppercase;
}
.navBar .logo {
  width: 2.5vw;
  height: 5.2083333333vw;
}
.navBar .logo svg {
  width: 100%;
  height: 100%;
}

.header {
  margin: 15.625vw auto 7.6041666667vw auto;
}

.circle1 {
  position: absolute;
  top: 15.8854166667vw;
  left: 47.9166666667vw;
  width: 31.25vw;
  height: 31.25vw;
  flex-shrink: 0;
  border-radius: 50%;
  background-color: #cfdae3;
  filter: blur(3.125vw);
  z-index: -1;
}

.ellipse1 {
  position: absolute;
  top: 7.8125vw;
  right: 0;
  width: 43.2291666667vw;
  height: 43.2291666667vw;
}

.header_flex {
  display: flex;
  flex-direction: column;
  width: 70.3125vw;
  margin: 0 auto;
  flex-wrap: nowrap;
}
.header_flex .flex_box1 {
  display: flex;
  width: 100%;
  justify-content: flex-start;
  align-items: center;
  gap: 3.5416666667vw;
}
.header_flex .flex_box1 .box1_text1 {
  width: 26.40625vw;
  font-size: 9.375vw;
  font-family: CG-Regular, sans-serif;
  color: #0e1822;
  font-weight: 400;
  line-height: 9.375vw;
}
.header_flex .flex_box1 .box1_text2 {
  width: 14.1666666667vw;
  font-size: 1.25vw;
  font-family: BG-Regular, sans-serif;
  font-weight: 390;
  line-height: 1.4;
  color: #4c4a4d;
  opacity: 0.5;
  flex-wrap: nowrap;
}
.header_flex .flex_box1 .box1_text3 {
  width: 19.7916666667vw;
  grid-row: 1/2;
  display: flex;
  align-items: center;
}
.header_flex .flex_box1 .box1_text3 .box1_line {
  content: "";
  width: 100%;
  height: 1px;
  background-color: #4c4a4d;
}
.header_flex .flex_box2 {
  display: flex;
  width: 100%;
  justify-content: flex-start;
  align-items: center;
  gap: 3.5416666667vw;
  flex-wrap: nowrap;
}
.header_flex .flex_box2 .box2_text4 {
  width: 13.1770833333vw;
  font-size: 1.25vw;
  font-family: BG-Regular, sans-serif;
  font-weight: 390;
  line-height: 1.4;
  color: #4c4a4d;
  opacity: 0.5;
}
.header_flex .flex_box2 .box2_text5 {
  width: 53.3854166667vw;
  font-size: 9.375vw;
  font-family: CG-Regular, sans-serif;
  color: #0e1822;
  font-weight: 400;
  line-height: 8.3333333333vw;
  flex-wrap: nowrap;
}
.header_flex .flex_box3 {
  display: flex;
  width: 100%;
  justify-content: flex-start;
  align-items: center;
}
.header_flex .flex_box3 .box3_text6 {
  width: 1200px;
  font-size: 9.375vw;
  font-family: CG-Regular, sans-serif;
  color: #0e1822;
  font-weight: 400;
  line-height: 8.3333333333vw;
}

.work {
  width: 83.3333333333vw;
  position: relative;
}
.work .title {
  font-size: 0.8333333333vw;
  font-family: BG-Bold, sans-serif;
  color: #4c4a4d;
  font-weight: 450;
  line-height: 1.5;
  text-transform: upperCase;
  margin-top: 2.0833333333vw;
  line-height: 1.5;
  margin-left: 2.0833333333vw;
}
.work .work_line2 {
  position: absolute;
  top: -8.2291666667vw;
  right: 50%;
  width: 1px;
  height: 11.5625vw;
  background-color: #4c4a4d;
  z-index: 1;
}
.work .work_line3 {
  position: absolute;
  top: -5.4166666667vw;
  width: 1px;
  height: 29.7916666667vw;
  background-color: #4c4a4d;
  z-index: 1;
}
.work .work_circle {
  position: absolute;
  top: -1.6145833333vw;
  left: -1.5625vw;
  width: 3.125vw;
  height: 3.125vw;
  flex-shrink: 0;
  border-radius: 50%;
  background-color: #b6c5d3;
  opacity: 0.9;
  z-index: 0;
}
/* ... */

